Edit GetProfileHandler
