# swagger-api.yaml
@@ -178,6 +178,9 @@ paths:
                 allOf:
                   - type: object
                     properties:
+                      "requested":
+                        type: boolean
+                        example: true
                       "id":
                         type: number
                         example: 1
@@ -743,3 +746,5 @@ components:
                       example: /img/1.png
                 - $ref: "#/components/schemas/User"
         - $ref: "#/components/schemas/Post"
+
+
